# loxomotive

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  Lox.hs  Loxomotive.cabal  Loxomotive.hs  README.md  example.lox  make  stack.yaml
.build/: .keep
app/: Main.hs
examples/: LinkedList.lox  example.lox
src/: Environment.hs  Expr.hs  Interpreter.hs  Object.hs  Parser.hs  Resolver.hs  Scanner.hs  Stmt.hs  Token.hs  TokenType.hs  Util.hs
src/Loxomotive/: Environment.hs  Expr.hs  Interpreter.hs  Object.hs  Parser.hs  Resolver.hs  Scanner.hs  Stmt.hs  Token.hs  TokenType.hs  Util.hs
