cabal-version:      2.4
name:               Loxomotive
version:            0.1.0.0

author:             Alexander Pankoff
license:            MIT

extra-source-files:
    README.md
    CHANGELOG.md

executable loxomotive
    main-is: Main.hs
    hs-source-dirs:
        app
    build-depends:
        base
       ,Loxomotive
       ,cond
       ,extra
    default-language: Haskell2010

library
    exposed-modules:
        Loxomotive.Environment
        Loxomotive.Expr
        Loxomotive.Interpreter
        Loxomotive.Object
        Loxomotive.Parser
        Loxomotive.Resolver
        Loxomotive.Scanner
        Loxomotive.Stmt
        Loxomotive.Token
        Loxomotive.TokenType
        Loxomotive.Util

    build-depends:    base
                     ,mtl
                     ,cond
                     ,monad-loops
                     ,Stack
                     ,extra
                     ,containers

    hs-source-dirs:   src
    default-language: Haskell2010
